--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # Qt Creator Files
 TUBITAK-4006-SAL.pro.user
 TUBITAK-4006-SAL.pro.user.4.9-pre1
+
+# vscode files
+.vscode/
+
+# build dir
+build/
